# picoChippy

./: .gitmodules  CMakeLists.txt  Makefile  Platform  README.md  _config.yml
.github/workflows/: build_on_push.yml
Source/: Audio.h  CMakeLists.txt  FilePortal.h  Synth.h  SynthIO.h  audio.cpp  picoChippy.cpp  picoVGM2151.cpp  picoX21H.cpp
Source/DX21/: AUTO.py  BBD.h  CMakeLists.txt  DX21Audio.h  DX21Synth.h  SysEx.cpp  SysEx.h  YM2151_Interface.h  YM2151_Model.h
Source/DX21/test/: CMakeLists.txt  testBBD.cpp  testIIRFilter.cpp  testiG10090.cpp
Source/VGM/: AUTO.py  Audio.h  CMakeLists.txt  Decoder.h  Header.h  IIRFilter.h  Player.h  VGMAudio.h  VGMDecoder.h  VGMImage.h  VGMPlayer.h  YM2151_Hardware.h  YM2151_Interface.h  YM2151_Model.h  iG10090.h
Source/VGM/SegaPCM/: Emulator.h
Source/VGM/YM2151/: Emulator.h  Fake.h  Hardware.h
Source/VGM/data/: 01.vgm
Source/VGM/test/: CMakeLists.txt  testBBD.cpp  testIIRFilter.cpp  testVGMDecoder.cpp  testiG10090.cpp
Source/chip/: AUTO.py  CMakeLists.txt  Chip.h  Dac.h  Sample.h  Table_atten4_3db.py  Table_midi_pan.py  Table_midi_vol.py  Table_note_period.py
Source/chip/OKIM6295/: Emulator.h  Interface.h
Source/chip/SN76489/: Emulator.h  Hardware.h  Interface.h
Source/chip/SegaPCM/: Emulator.h  Interface.h
Source/chip/YM2151/: Emulator.h  Hardware.h  Interface.h
Source/chip/YM3812/: Emulator.h  Hardware.h  Interface.h
Source/hw/: CMakeLists.txt  Config.h  Dac.h  MidiIn.h  MidiUsbDevice.h  Usb.h  YM2151.h  hw.h  picoX21H.h
Source/hw/Device/: Dac.h  Devices.h  Lcd.h  Led.h  PhysMidi.h  Usb.h  YM2151.h
Source/hw/Test/: .test_dac.cpp.swp  CMakeLists.txt  Table_sine.py  test_dac.cpp  test_hw.cpp  test_lcd.cpp  test_led.cpp  test_phys_midi.cpp  test_picoX21H.cpp  test_usb_midi.cpp  test_usb_storage.cpp
Source/synth/: CMakeLists.txt
docs/Diagram/: picoChippy.drawio
docs/Schematic/: picoChippy.kicad_prl  picoChippy.kicad_pro  picoChippy.kicad_sch
music/: AUTO.py  CMakeLists.txt  Table_vgm.py  UNPACK.py
